objects/Channel_Partner_on_site_Audit__c.object
<CustomObject>
    <fields>
        <fullName>ABB_Channel_Partner_Portal_access__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is access of ABB Channel Partner Portal granted and pages are used by the partner?</inlineHelpText>
        <label>ABB Channel Partner Portal access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ABB_Warranty_rules_and_instructions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Warranty directive , local rules, customer specific instructions, etc being followed?</inlineHelpText>
        <label>ABB Warranty rules and instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ABB_Warranty_rules_instructions_Flag__c</fullName>
        <formula>IF( NOT(ABB_Warranty_rules_and_instructions__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_and_user_knowledge_to_sales_tools__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Businesses to provide the list of tools that are required. Can Include e.g. configuration, selection, pricing, quotation and ordering tools</inlineHelpText>
        <label>Access and user knowledge to sales tools</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_to_all_warranty_material_Flag__c</fullName>
        <formula>IF( NOT(Access_to_all_warranty_material__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_to_all_warranty_material__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access to all warranty material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_to_needed_tools_and_Databasis__c</fullName>
        <inlineHelpText>Businesses to provide the list of tools. Can Includes e.g. configuration, selection, databanks for drawings, ..</inlineHelpText>
        <label>Access to needed tools and Databasis</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not handled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Access_to_service_spares_Flag__c</fullName>
        <formula>IF(ISPICKVAL(Access_to_service_spares__c,&apos;&apos;), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_to_service_spares__c</fullName>
        <inlineHelpText>Is access to service spares to agreed product range confirmed? 
Access has to be according to agreed response time.  Note that inventory is NOT required for all ABB products</inlineHelpText>
        <label>Access to service spares</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory not required</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Access_user_knowledge_Sales_Tools_Flag__c</fullName>
        <formula>IF( NOT(Access_and_user_knowledge_to_sales_tools__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>CASESAFEID(Channel_Partner_Authorization__r.Account__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization_Approved_Date__c</fullName>
        <formula>IF (ISPICKVAL(Channel_Partner_Authorization__r.Approval_Progress__c, &apos;Approved&apos;), Channel_Partner_Authorization__r.Approved_Date__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorization Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_tracking_System_in_use__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Including e.g. lead time reporting opportunites</inlineHelpText>
        <label>Case tracking System in use?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Authorization__c</fullName>
        <label>Channel Partner Authorization</label>
        <referenceTo>Channel_Partner_Authorization__c</referenceTo>
        <relationshipLabel>Channel Partner on-site Audits</relationshipLabel>
        <relationshipName>Channel_Partner_on_site_Audits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Code_of_Conduct_communicated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the Code-of-Conduct has been communicated, discussed and documented as per local principles.</inlineHelpText>
        <label>Code-of-Conduct communicated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commissioning_provided_actively_Flag__c</fullName>
        <formula>IF(ISPICKVAL(Commissioning_provided_actively__c,&apos;&apos;), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commissioning_provided_actively__c</fullName>
        <label>Commissioning provided actively</label>
        <picklist>
            <picklistValues>
                <fullName>actively</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>only when requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>subcontracted when needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commissioning_report_given_to_customers__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Recommended. For certain product lines, report template or tool support available from ABB</inlineHelpText>
        <label>Commissioning report given to customers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_certifications__c</fullName>
        <label>Company certifications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competent_field_service_personnel_Flag__c</fullName>
        <formula>IF( NOT(Competent_field_service_personnel__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competent_field_service_personnel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Competent field service personnel to handle warranty repairs</inlineHelpText>
        <label>Competent field service personnel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competent_people_for_spare_parts_Flag__c</fullName>
        <formula>IF( NOT(Competent_people_for_spare_parts__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competent_people_for_spare_parts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>..or back up ABB people known</inlineHelpText>
        <label>Competent people for spare parts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competent_people_for_warranty_handling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competent people for warranty handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Control_systems_you_have_competence_on__c</fullName>
        <inlineHelpText>PLCs, Motion control; indicate also brands. Control system competence is specially asked as it masters the choise of other components/products used.</inlineHelpText>
        <label>Control systems you have competence on</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Described how the Customer accesses the Technical Support from the Partner?</inlineHelpText>
        <label>Customer Access to tech support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Access_to_tech_support_Flag__c</fullName>
        <formula>IF( NOT(Customer_Access__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_feedback_collected__c</fullName>
        <description>Customer feedback collected and statistic available
Highly recommended to do after every service visit. Explain if this is measured and how it is measured and what kind of process is available to customer satisfaction improvement.</description>
        <label>Customer feedback collected</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Handled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_onsite_Audit_Flag__c</fullName>
        <formula>IF( ISBLANK( Date_of_onsite_Audit__c ), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_onsite_Audit__c</fullName>
        <label>Date of onsite Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Defective_material_stored_and_handled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Defective material stored and handled according to the ABB warranty directive
See warranty directives for proper handling</inlineHelpText>
        <label>Defective material stored and handled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defective_material_stored_handled_Flag__c</fullName>
        <formula>IF( NOT(Defective_material_stored_and_handled__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Units__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo Units</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_Units_available_for_testing__c</fullName>
        <inlineHelpText>List which units</inlineHelpText>
        <label>Demo Units available for testing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESD_handling_process_known_and_utilized__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Electrostatic discharge (ESD)</inlineHelpText>
        <label>ESD handling process known and utilized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESD_handling_process_known_utilized_Flag__c</fullName>
        <formula>IF( NOT(ESD_handling_process_known_and_utilized__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_ordering_in_use_for_warranty_handling__c</fullName>
        <label>E-ordering in use for warranty handling</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not handled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>E_ordering_in_user_for_spare_part_orders__c</fullName>
        <label>E-ordering in user for spare part orders</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not handled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ensure_24_7_Contacts_are_up_to_date_Flag__c</fullName>
        <formula>IF( NOT(Ensure_24_7_Contacts_are_up_to_date__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ensure_24_7_Contacts_are_up_to_date__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ensure that possible contacts for 24/365 contact details are up-to-date. This will be made available also in www.abb.com.</inlineHelpText>
        <label>Ensure 24/7 Contacts are up-to-date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Service_reports_stored_in_ABB_Base__c</fullName>
        <inlineHelpText>Are the field service reports stored in ABB installed base -register?</inlineHelpText>
        <label>Field Service reports stored in ABB Base</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not handled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_selected_no_fill_below_Fields__c</fullName>
        <defaultValue>&quot;If you selected no you need to fill below Fields on this side!&quot;</defaultValue>
        <description>R7A . Channel Authorization</description>
        <label>If selected no fill below Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_people_service_authorization_Flag__c</fullName>
        <formula>IF( ISNULL(No_of_people_with_service_authorization__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_people_with_service_authorization__c</fullName>
        <inlineHelpText>Typically minimum 2 persons are required, 1 in some cases</inlineHelpText>
        <label>No. of people with service authorization</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note_Sales_Tools__c</fullName>
        <label>Note - Sales Tools</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Cabinet_Assembly_Panel_building__c</fullName>
        <inlineHelpText>Additional info to be registered for the listed topics</inlineHelpText>
        <label>Notes - Cabinet Assembly/Panel building</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Engineering__c</fullName>
        <inlineHelpText>Additional info to be registered for the listed topics</inlineHelpText>
        <label>Notes - Engineering</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Spare_parts__c</fullName>
        <label>Notes - Spare parts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_on_Training__c</fullName>
        <inlineHelpText>Additional info to be registered for the listed topics</inlineHelpText>
        <label>Notes on Training</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_on_commissioning__c</fullName>
        <inlineHelpText>Additional info to be registered for the listed topics</inlineHelpText>
        <label>Notes on commissioning</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_on_product_and_process_knowledge__c</fullName>
        <label>Notes on product and process knowledge</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_on_site_services__c</fullName>
        <label>Notes - on-site services</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_on_technical_support__c</fullName>
        <inlineHelpText>Additional info to be registered for the listed topics</inlineHelpText>
        <label>Notes on technical support</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_warranty_repairs__c</fullName>
        <label>Notes - warranty repairs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Sales_People_trained_Flag__c</fullName>
        <formula>IF( ISNULL( Number_of_Sales_People_trained__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Sales_People_trained__c</fullName>
        <inlineHelpText>How many persons received sales training according to ABB authorisation Process? Can be the same person as for support/ engineering.</inlineHelpText>
        <label>Number of Sales People trained</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Own_Cabinet_panel_building_Flag__c</fullName>
        <formula>IF(ISPICKVAL(Own_Cabinet_panel_building__c,&apos;&apos;), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Own_Cabinet_panel_building__c</fullName>
        <label>Own Cabinet/panel building</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>People_technical_author_flag__c</fullName>
        <formula>IF( ISBLANK( of_persons_technically_authorized__c ), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personnel_for_Commissioning_flag__c</fullName>
        <formula>IF( ISBLANK(personnel_for_commissioning__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Persons_for_engineering_flag__c</fullName>
        <formula>IF(  ISNULL(persons_for_engineering__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_for_fast_order_handling_Flag__c</fullName>
        <formula>IF( NOT(Process_for_fast_order_handling_known__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_for_fast_order_handling_known__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process for fast order handling known</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_brochures_and_flyers_available__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are the Product brochures and Flyers available for the customers? Define locally what is needed. Electronic format is OK if so agreed.</inlineHelpText>
        <label>Product brochures and flyers available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_brochures_flyers_available_Flag__c</fullName>
        <formula>IF( NOT(Product_brochures_and_flyers_available__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_guides_and_other_documentation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Partner finds all relevant sales support material available from ABB datebases</inlineHelpText>
        <label>Product guides and other documentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_price_list_available_from_ABB_to__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are the product price Lists available to the partner? In tool or separate list for appropriate products</inlineHelpText>
        <label>Product price list available from ABB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_price_list_available_from_partne__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Refers to the parter&apos;s price list for their customers. Check if yes.</inlineHelpText>
        <label>Product price list available from Partne</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_reference_list_is_up_to_date__c</fullName>
        <inlineHelpText>customer references shall be a joint objective to maintain 
data to contain correct End Customer data. Needed e.g. for the software licenses.&quot;</inlineHelpText>
        <label>Project reference list is up-to-date</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Handled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quality_management_of_cabinet__c</fullName>
        <inlineHelpText>Explain how you manage the quality of cabinet/panel builders used as sub-supplier</inlineHelpText>
        <label>Quality management of cabinet</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relevant_HSE_aspects_know_and_followed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Relevant HSE aspects are known and followed when working with ABB products
(health, safety and environmental). Note existing ABB guideline for ….</inlineHelpText>
        <label>Relevant HSE aspects know and followed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relevant_HSE_aspects_know_followed_Flag__c</fullName>
        <formula>IF( NOT(Relevant_HSE_aspects_know_and_followed__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_for_field_repair_available_Flag__c</fullName>
        <formula>IF( NOT(Report_for_field_repair_available__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_for_field_repair_available__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is a written report for field repair available for the end customer?
Mandatory to have written report. Standard ABB -format recommended to be used.</inlineHelpText>
        <label>Report for field repair available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_time_to_solve_warranty_cases__c</fullName>
        <label>Response time to solve warranty cases</label>
        <picklist>
            <picklistValues>
                <fullName>Measured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not measured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not handled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Responsible_person_to_run_field_service__c</fullName>
        <label>Responsible person to run field service</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not handled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_support_available_from_ABB_known__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Defined contacts for critical processes and product lines. Preferably list on Business Plan.</inlineHelpText>
        <label>Sales support available from ABB known</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_support_from_ABB_known_Flag__c</fullName>
        <formula>IF( NOT(Sales_support_available_from_ABB_known__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_of_service_authorization__c</fullName>
        <label>Scope of service authorization</label>
        <picklist>
            <picklistValues>
                <fullName>Whole installed base in agreed region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product range or services for own installations only</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_utilization_rate__c</fullName>
        <inlineHelpText>Is the Service Engineer utilization rate measured and statistics are available? Explain the measurement and formula.</inlineHelpText>
        <label>Service Engineer utilization rate</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not handled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_person_have_access_to_tools__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do all service persons have access to required tools and databases? See separate business specific Lists if existing.</inlineHelpText>
        <label>Service person have access to tools</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_products_known__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All different ABB stardard service products presented to be utilized by Partner if appropriate (preventive maintenance, spare part services etc.)</inlineHelpText>
        <label>Service products known</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spare_part_inventory_list_available__c</fullName>
        <inlineHelpText>Spare part inventory list available and matching to required spares
Explain the system how inventory is kept updated (ERP system) and stock counting method.</inlineHelpText>
        <label>Spare part inventory list available</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not handled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spare_part_operations_handled_by_partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spare part operations handled by partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spare_part_ops_handled_by_partner_Flag__c</fullName>
        <formula>IF( NOT(Spare_part_operations_handled_by_partner__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Flag__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&apos;&apos;), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Targeted_Authorization_confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted Authorization confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_support_available_frm_ABB_Flag__c</fullName>
        <formula>IF( NOT(Technical_support_available_from_ABB__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_support_available_from_ABB__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Defined contacts for critical processes and product lines are known. Preferably list on Business Plan</inlineHelpText>
        <label>Technical support available from ABB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Testing_Routine_for_ready_made_cabinet__c</fullName>
        <inlineHelpText>Explain the testing routine for ready made cabinet</inlineHelpText>
        <label>Testing Routine for ready made cabinet</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tools_collaboration_system_in_use_Flag__c</fullName>
        <formula>IF( NOT(Tools_collaboration_system_is_in_use__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tools_collaboration_system_is_in_use__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Explain how it is done and by which company. Check during the audit that measurement tools have calibration sticker. Mandatory for all measurement tools</inlineHelpText>
        <label>Tool calibration system</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>